[workspace]
resolver = "2"
members = ["crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.package]
name = "Sparticles"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "graphics"]
authors = ["Norlock"]
license = "Apache 2.0"
