[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
async-std = "1.12.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.package]
name = "Sparticles"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "graphics"]
authors = ["Norlock"]
license = "Apache 2.0"
