[package]
name = "sparticles_app"
version = "0.1.0"
edition = "2021"
keywords = ["gamedev", "graphics"]
authors = ["Norlock"]
license = "Apache 2.0"

[lib]
name = "sparticles_app"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = { version = "0.24.7", features = ["png", "jpeg"] }
bytemuck = "1.14.0"
encase = { version = "0.6.1", features = ["glam"] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
wgpu-profiler = { version = "0.15.0" }
glam = { version = "0.24.2", features = ["serde"] }
anyhow = "1.0.75"
rand = "0.8.5"
env_logger = "0.10.0"
egui-wgpu = "0.24.0"
egui-winit = "0.24.0"
gltf = { version = "1.3.0", features = [
    "KHR_materials_ior",
    "KHR_materials_specular",
    "KHR_materials_pbrSpecularGlossiness",
    "KHR_materials_transmission",
    "KHR_materials_emissive_strength",
    "KHR_texture_transform",
    "KHR_materials_variants",
    "KHR_materials_volume",
    "KHR_lights_punctual",
    "KHR_materials_unlit",
] }
async-std.workspace = true
